# zeperion

./: LICENSE  README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
public/: splashscreen.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/mapper/: server_brand.html  server_instance.html  server_item.html  server_version.html  zeperion.db
src-tauri/src/: commands.rs  config.rs  entity.rs  lib.rs  main.rs  mapper.rs  vo.rs
src-tauri/src/utils/: download.rs  server.rs
src/api/: config.ts  index.ts  other.ts  server.ts
src/assets/: splashscreen.html
src/components/: AddBrandDialog.vue  AddVersionDialog.vue
src/layout/: BaseLayout.vue  ListLayout.vue  MenuLayout.vue
src/router/: index.ts
src/store/: index.ts  module.ts
src/store/module/: appConfig.ts  serverDownload.ts
src/style/: base.scss  reset.css
src/types/: config.ts  menu.ts  server.ts
src/views/: Weclome.vue
src/views/about/: index.vue
src/views/download/: ImportResource.vue  index.vue
src/views/download/components/: EditDialog.vue  SearchDialog.vue
src/views/home/: index.vue
src/views/list/: EditConfig.vue  Eula.vue  TerminalView.vue  index.vue
src/views/mirror/: ImportMirror.vue  index.vue
src/views/mirror/components/: ServerCreateDialog.vue
src/views/setting/: index.vue
