[package]
name = "zeperion"
version = "0.1.0"
description = "一个我的世界开服器"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "fs-all", "macos-private-api", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.40"

lazy_static = "1.4.0"

rbs = { version = "4.3"}
rbatis = { version = "4.3"}
rbdc-sqlite = { version = "4.3" }

log = "0.4"
fast_log = "1.5"

reqwest = { version = "0.11.6", features = ["json", "stream"] }
futures-util = "0.3.28"
regex = "1.8.3"

libc = "0.2"
open = "4.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
